--- a/Verification/SPI/makefile
+++ b/Verification/SPI/makefile
@@ -1,8 +1,9 @@
-DESIGN_NAME = "tb_SPI"
-LOG_VCS     = "vcs.log"
-LOG_SIMV    = "simv.log"
-FILE_LIST   = "./list.f"
-UVM_HOME    = "/data1/share/uvm-1.1d"
+DESIGN_NAME  = "tb_SPI"
+LOG_VCS      = "vcs.log"
+LOG_SIMV     = "simv.log"
+FILE_LIST    = "./list.f"
+FILE_LIST_DC = "./list_dc.f"
+UVM_HOME     = "/data1/share/uvm-1.1d"
 
 # Code Coverage
 CM      = -cm line+cond+tgl+fsm+branch+assert
@@ -20,14 +21,15 @@ env :
 	export UVM_HOME=$(UVM_HOME)
 
 # find . -name "*.v"  > list.f
+
+# Pre Simulation 
 vcs : env
 	vcs -nc -j32 -full64 -sverilog -debug_access+all \
 		-l $(LOG_VCS) -f $(FILE_LIST) $(CM) $(CM_DIR)
 
-dcvcs : env
-	vcs -nc -j32 -full64 -sverilog -debug_access+all \
-		+nospecify +notimingcheck +delay_mode_zero \
-		-l $(LOG_VCS) -f $(FILE_LIST) $(CM) $(CM_DIR)
+simv : env vcs
+	./simv -nc +COMPARE +fsdb+parallel \
+		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
 
 uvm : env
 	vcs -nc -j32 -full64 -sverilog -debug_access+all -timescale=1ns/1ps \
@@ -36,30 +38,33 @@ uvm : env
 		$(UVM_HOME)/src/dpi/uvm_dpi.cc -CFLAGS -DVCS \
 		-l $(LOG_VCS) -f $(FILE_LIST) $(CM) $(CM_DIR)
 
+uvms : env uvm
+	./simv -nc +COMPARE +fsdb+parallel \
+		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
+
+# DC Post Simulation
+dcvcs : env
+	vcs -nc -j32 -full64 -sverilog -debug_access+all \
+		+nospecify +notimingcheck +delay_mode_zero \
+		-l $(LOG_VCS) -f $(FILE_LIST_DC) $(CM) $(CM_DIR)
+		
+dcsimv : env dcvcs
+	./simv -nc +COMPARE +fsdb+parallel \
+		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
+
 dcuvm : env
 	vcs -nc -j32 -full64 -sverilog -debug_access+all -timescale=1ns/1ps \
 		+nospecify +notimingcheck +delay_mode_zero \
 		+acc +vpi +define+UVM_OBJECT_MUST_HAVE_CONSTRUCTOR \
 		+incdir+$(UVM_HOME)/src $(UVM_HOME)/src/uvm.sv \
 		$(UVM_HOME)/src/dpi/uvm_dpi.cc -CFLAGS -DVCS \
-		-l $(LOG_VCS) -f $(FILE_LIST) $(CM) $(CM_DIR)
-
-simv : env vcs
-	./simv -nc +COMPARE +fsdb+parallel \
-		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
-		
-dcsimv : env dcvcs
-	./simv -nc +COMPARE +fsdb+parallel \
-		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
-
-uvms : env uvm
-	./simv -nc +COMPARE +fsdb+parallel \
-		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
+		-l $(LOG_VCS) -f $(FILE_LIST_DC) $(CM) $(CM_DIR)
 
 dcuvms : env dcuvm
 	./simv -nc +COMPARE +fsdb+parallel \
 		   -l $(LOG_SIMV) $(CM) $(CM_DIR)
 
+# Utils
 verdi :
 	verdi $(DESIGN_NAME).fsdb
 
